--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="">WebStudio</a>
+        <a lang="en" href="">WebStudio</a>
         <nav>
 
           <ul>
@@ -19,36 +19,37 @@
 
            </ul>
         </nav>
-   <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-   <a href="tel:+380961111111 ">+38 096 111 11 11</a>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111 ">+38 096 111 11 11</a></li>  
+        </ul>
+ 
     </header>
    
     <!--Mailn Content-->
     <main>
-
-        <div>
             <section>
                 <h1>Эффективные решения <br> для вашего бизнеса</h1>
                 <button type="button">Заказать услугу</button>
             </section>
-        </div>
         
         <section>
+            <h2>Наши преимущества</h2>
             <ul>
                 <li>
-                    <h2>Внимание к деталям</h2>
+                    <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h2>Пунктуальность</h2>
+                    <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h2>Планирование</h2>
+                    <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h2>Современные технологии</h2>
+                    <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -56,9 +57,9 @@
 <section>
     <h2>Чем мы занимаемся</h2>
     <ul>
-        <li> <img src="./images/box1.jpg" alt="box1" width="370"></li>
-        <li><img src="./images/box2.jpg" alt="box2" width="370"></li>
-        <li><img src="./images/box3.jpg" alt="box3" width="370"></li>
+        <li> <img src="./images/box1.jpg" alt="разработка по" width="370"></li>
+        <li><img src="./images/box2.jpg" alt="тестирование приложения" width="370"></li>
+        <li><img src="./images/box3.jpg" alt="работа с цветом" width="370"></li>
     </ul>
 </section>
 
@@ -66,30 +67,33 @@
     <h2>Наша команда</h2>
     <ul>
         <li><img src="./images/disigner.jpg" alt="productdesigner" width="270"> <h3>Игорь Демьяненко</h3>
-        <p>Product Designer</p>
+        <p lang="en">Product Designer</p>
         </li>
         <li><img src="./images/developer.jpg" alt="developer" width="270">
             <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
         </li>
         <li><img src="./images/marketing.jpg" alt="marketing" width="270">
             <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
         </li>
         <li><img src="./images/uidisigner.jpg" alt="uidisigner" width="270">
             <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
         </li>
     </ul>
 </section>
     </main>
 
     <footer>
-        <a href="">WebStudio</a>
+        <a lang="en" href="">WebStudio</a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26 <br>
-            <a href="mailto:info@example.com">info@example.com</a><br>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <ul>
+                <li>г. Киев, пр-т Леси Украинки, 26 <br></li>
+                <li><a href="mailto:info@example.com">info@example.com</a><br></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+           
         </address>
     </footer>
 </body>
